src/z80asm/z80asm2/t/20-preproc/expected/undefine_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/undefine_21.asm
Assembling t/20-preproc/input/undefine_21.asm...
t/20-preproc/input/undefine_21.asm:1:9: error: Expected identifier after UNDEFINE
    undefine ; no name
            ^
t/20-preproc/input/undefine_21.asm:2:16: error: Unexpected token after UNDEFINE: world
    hello undefine world ; extra tokens
                   ^
# file: t/20-preproc/input/undefine_21.asm
EndOfLine	"\n"	3:1	
